<resources>
    <string name="app_name">MyVendor</string>
    <string name="title_activity_dashboard">MainActivity</string>

    //Login
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">E-mail</string>
    <string name="et_hint_password">Senha</string>
    <string name="lbl_forgot_password">Esqueceu a senha?</string>
    <string name="btn_lbl_login">Acessar</string>
    <string name="don_t_have_an_account">Você não possui uma conta?</string>
    <string name="register"><u>Cadastrar</u></string>

    //Register
    <string name="create_an_account">Criando uma Conta</string>
    <string name="hint_last_name">Sobrenome</string>
    <string name="hint_first_name">Nome</string>
    <string name="et_hint_confirm_password">Confirme a senha</string>
    <string name="i_agree_to_the_terms_and_condition">Eu aceito os <u>Termos e Condições</u></string>
    <string name="btn_lbl_register">Cadastrar</string>
    <string name="already_have_an_account">Já possui uma conta?</string>
    <string name="login"><u>Login</u></string>

    //Message
    <string name="err_msg_enter_first_name">Por Favor, preencha o nome.</string>
    <string name="err_msg_enter_last_name">Por Favor, preencha o sobrenome.</string>
    <string name="err_msg_enter_email">Por Favor, preencha o e-mail.</string>
    <string name="err_msg_enter_password">Por Favor, preencha a senha.</string>
    <string name="err_msg_enter_confirm_password">Por Favor, preencha a confirmação da senha.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">A senha e confirmação da senha não são iguais.</string>
    <string name="err_msg_agree_terms_and_condition">Por Favor, aceite os termos de uso</string>
    <string name="registerSuccess">Obrigado por se registrar!</string>

    //Forgot password
    <string name="forgot_password_screen">Esqueceu a senha?</string>
    <string name="forgot_password_msg">Coloque o seu endereço de e-mail e nós enviaremos um e-mail para restaurar a sua senha.</string>
    <string name="btn_forgot_password">Restaurar a Senha</string>
    <string name="success_send_email">Sua solicitação foi enviada, verifique seu e-mail</string>
    <string name="register_success">Você foi Cadastrado com sucesso</string>

    //Profile Details
    <string name="title_complete_profile">Perfil Incompleto</string>
    <string name="et_hint_mobile_number">Celular</string>
    <string name="rb_lbl_male">MASCULINO</string>
    <string name="rb_lbl_female">FEMININO</string>
    <string name="btn_lbl_save">Salvar</string>
    <string name="read_storage_permission_denied">Ok, você não permitiu acesso aos seus arquivos. Você pode também pode permitir através das configurações </string>
    <string name="image_selection_failed">Imagem selecionada falhou</string>
    <string name="err_msg_enter_mobile_number">Por favor, preencha o número de telefone</string>
    <string name="mgs_profile_update_success">Perfil atualizado com sucesso!</string>

    <string name="msg_upload_success_image">Sua Imagem foi atualizada com sucesso</string>

    //Menu
    <string name="title_dashboard">Painel</string>
    <string name="title_products">Produtos</string>
    <string name="title_orders">Pedidos</string>

    <string name="please_click_back_again_to_exit">Por Favor, clique novamente para sair</string>

    //Settings
    <string name="action_settings">Configuração</string>
    <string name="title_settings">Configuração</string>
    <string name="lbl_edit">Editar</string>
    <string name="lbl_list_client">Lista de Clientes</string>
    <string name="btn_lbl_logout">Sair</string>
    <string name="title_edit_profile">Editar Perfil</string>
    <string name="action_add_product">Novo Produto</string>

    //Products
    <string name="title_add_product">Novo Produto</string>
    <string name="et_hint_product_title">Título</string>
    <string name="et_hint_product_price">Valor (R$)</string>
    <string name="et_hint_product_description">Descrição</string>
    <string name="et_hint_product_quantity">Quantidade</string>
    <string name="product_delete_success_message">Seu produto foi excluído com sucesso.</string>
    <string name="delete_dialog_title">Excluir</string>
    <string name="delete_dialog_message">Você tem certeza que deseja EXCLUIR esse produto?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string name="err_msg_select_product_image">Por favor, insira a imagem do produto.</string>
    <string name="err_msg_enter_product_title">Por favor, preencha o título.</string>
    <string name="err_msg_enter_product_price">Por favor, preencha o valor.</string>
    <string name="err_msg_enter_product_description">Por favor, preencha a descrição.</string>
    <string name="err_msg_enter_product_quantity">Por favor, preencha a quantidade.</string>

    <string name="product_uploaded_success_message">Seu produto foi atulizado com sucesso</string>
    <string name="no_products_added_yet">Nenhum produto foi adicionado!</string>
    <string name="no_dashboard_item_found">Item não encontrado!</string>
    <string name="loading">Carregando...</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Product Details
    <string name="title_product_details">Detalhe do Produto</string>
    <string name="lbl_product_description">Descrição</string>
    <string name="lbl_product_details_stock_quantity">Quantidade Disponivél</string>

    //Cart
    <string name="btn_lbl_add_to_cart">Adicionar ao Pedido</string>
    <string name="success_message_item_added_to_cart">Produto adicionado com sucesso!</string>
    <string name="btn_lbl_go_to_cart">Ir ao Carrinho</string>

    <string name="title_my_cart">Pedido</string>
    <string name="no_cart_item_found">Nenhum item encontrado no carrinho!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Frete</string>
    <string name="lbl_total_amount">Valor Total</string>
    <string name="btn_lbl_checkout">Fechar Pedido</string>
    <string name="action_cart">Carrinho</string>
    <string name="lbl_out_of_stock">Fora de Estoque</string>
    <string name="mgs_item_removed_successfully">Item removido com sucesso!</string>
    <string name="msg_for_available_stock">O estoque disponível é %1$s! Você não pode adicionar mais do que a quantidade em estoque.</string>
    <string name="action_search">Pesquisar</string>

    //Client
    <string name="title_client_list">Lista de Clientes</string>
    <string name="no_address_found">Nenhum cliente foi encontrado</string>
    <string name="lbL_add_address">Novo Cliente</string>

    <string name="title_add_client">Novo Cliente</string>
    <string name="hint_full_name">Nome Completo</string>
    <string name="hint_phone_number">Telefone</string>
    <string name="hint_address">Endereço</string>
    <string name="hint_zip_code">CEP</string>
    <string name="hint_additional_note">Info Adicional</string>
    <string name="hint_other_details">Outros Detalhes</string>
    <string name="lbl_home">CASA</string>
    <string name="lbl_office">TRABALHO</string>
    <string name="lbl_other">OUTRO</string>

    <string name="err_msg_please_enter_full_name">Por favor, preencha o nome.</string>
    <string name="err_msg_please_enter_phone_number">Por favor, preencha o telefone.</string>
    <string name="err_msg_please_enter_address">Por favor, preencha o endereço.</string>
    <string name="err_msg_please_enter_zip_code">Por favor, preencha o CEP.</string>
    <string name="err_msg_please_enter_other_details">Por favor, preencha outros detalhes.</string>
    <string name="err_your_client_added_successfully">Cliente adicionado com sucesso!</string>

    <string name="title_edit_client">Editar Cliente</string>
    <string name="btn_lbl_update">Atualizar</string>
    <string name="msg_your_client_updated_successfully">Cliente foi atualizado com sucesso</string>

    <string name="err_your_client_deleted_successfully">Cliente excluído com sucesso</string>
    <string name="title_select_client">Selecione um Cliente</string>

    <string name="title_checkout">Finalizar</string>
    <string name="checkout_lbl_product_items">Itens</string>
    <string name="checkout_lbl_selected_client">Cliente Selecionado</string>
    <string name="checkout_lbl_items_receipt">Recibo</string>
    <string name="lbl_payment_mode">Modo Pagamento</string>
    <string name="lbl_cash_on_delivery">Boleto 15 dias</string>
    <string name="btn_lbl_place_order">Realizar Pedido</string>
    <string name="no_orders_placed_yet">Nenhum pedido foi feito ainda</string>

    //Order
    <string name="title_my_order_details">Detalhe do Pedido</string>
    <string name="order_details_lbl">Pedido Detalhe</string>
    <string name="order_details_lbl_order_id">ID</string>
    <string name="order_details_lbl_order_date">Data</string>
    <string name="order_details_lbl_order_status">Status</string>
    <string name="order_status_pending">Pendente</string>
    <string name="order_details_lbl_shipping_address">Endereço de Entrega</string>

    <string name="order_status_in_process">Processando</string>
    <string name="order_status_delivered">Entregue</string>


</resources>